<resources>
    <string name="app_name">farandula</string>
    <!--<string name="app_name">Kitchen Staff</string>-->
    <string name="pizza_and_restaurant">Pizza &amp; Restaurant</string>
    <string name="specials">Specials</string>
    <string name="breakfast">BreakFast</string>
    <string name="lunch">lunch</string>
    <string name="dinner">Dinner</string>
    <string name="beverages">Beverages</string>
    <string name="your_order_list">Your order list</string>
    <string name="add_for_order"><u>Add for Order</u></string>
    <string name="no_food_items_found">No food items found.</string>
    <string name="my_order_list">My Order List</string>
    <string name="no_internet_connection">No internet connection , please connect to internet.</string>
    <string name="add_more_items">Add More Item\'s</string>
    <string name="payment_informations">Payment Information</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="pay_your_bill">Pay Your Bill</string>
    <string name="grand_total">Grand Total \t+Tax</string>
    <string name="grand_total_k">Grand Total \t</string>
    <string name="have_a_promo_code">Have a promo code</string>
    <string name="apply_code">Apply Code</string>
    <string name="enter_promo_code">Enter Promo Code</string>
    <string name="choose_payment">Choose Payment Method</string>
    <string name="credit_card">Credit Card</string>
    <string name="cash">Cash</string>
    <string name="paypal">Paypal</string>
    <string name="entercarddetails">Enter Card Details</string>
    <string name="cvv">CVV?</string>
    <string name="total">Total</string>
    <string name="proceed_to_payment">Proceed To Payment</string>
    <string name="thankyou">Thank You…!!!</string>
    <string name="payment_is_successfully_done">Payment is Successfully Done</string>
    <string name="loading">Loading List ,Please wait…</string>
    <string name="added">Added</string>
    <string name="please_select_orders">Please select orders</string>
    <string name="feedback">Feedback</string>
    <string name="give_rating_this_service_for_improvements">Give Ratings this service for improvement</string>
    <string name="write_feedback">Write Feedback…</string>
    <string name="submit">Submit</string>
    <string name="loading_data">Loading Data ,Please wait…</string>
    <string name="cardholder_name">Card Holder Name</string>
    <string name="card_number">Card Number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="your_order_is">"Your order is "</string>
    <string name="next">Next</string>
    <string name="select_restaurant">Select Restaurant</string>
    <string name="no_sub_categories_available">No sub categories available</string>
    <string name="add_instruction">Add them here. We\'ll do our best to make it happen.</string>
    <string name="please_select_two_options">Required. Please select 2 options</string>
    <string name="side_choice">Side Choice</string>
    <string name="special_request">Special Requests</string>
    <string name="cancle">Cancel</string>
    <string name="you_cannot_select_more_than_two">You cannot select more than 2 options</string>
    <string name="need_help">Need Help</string>
    <string name="message">Messages</string>
    <string name="type_here">! Type Message</string>
    <string name="welcome_message">Hi Welcome to Farandula Kitchen How can I help you?</string>
    <string name="please_write_some_message">Please write some message to send</string>
    <string name="select_seats">Select Seats</string>
    <string name="select_tables">Select Tables</string>
    <string name="res_id_blank">Restaurant name is blank</string>
    <string name="table_id_blank">Table name is blank</string>
    <string name="seat_id_blank">Seat name is blank</string>
    <string name="first_select_restaurant_and_table">Select Restaurant and Table</string>
    <!---->
    <!---->

    <string name="enter_branch_code">Enter Branch Code</string>
    <string name="go">Go</string>
    <string name="orders">Orders</string>
    <string name="statistics">Statistics</string>
    <string name="order_history">Order History</string>
    <string name="sortBy">Sort by Date</string>
    <string name="subTable">Sub Table :</string>
    <string name="orderFrom">Order From :</string>
    <string name="more_details">More Details</string>
    <string name="new_orders">New Order</string>
    <string name="upcoming_order">Upcoming Order</string>
    <string name="search_order">Search Order…</string>
    <string name="order_details">Order Details</string>
    <string name="print_receipt">Print Receipt</string>
    <string name="order_is_ready">Order is Ready</string>
    <string name="accept_order">Accept Order</string>
    <string name="total_price">Total Price</string>
    <string name="qty">Qty.</string>
    <string name="price">Price</string>
    <string name="itemname">Item Name</string>
    <string name="export">Export</string>
    <string name="to">To</string>
    <string name="verifying_code_please_wait">Verifying code , please wait</string>
    <string name="instractions">Instractions</string>
    <string name="chat_with_customer">Chat with customer</string>
    <string name="no_messages_yet">No Message Yet</string>
    <string name="place_order">Place Order</string>
    <string name="send_instructions_to_kitchen_staff">Send instruction to kitchen staff</string>
    <string name="please_enter_code">Please enter the restaurant code</string>
    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>
    <string name="kitchen_staff">Kitchen Staff</string>
    <string name="no_order_history">No order history</string>
    <string name="no_order_history_for_pdf">No order history for pdf</string>
    <string name="registering_please_wait">Registering please wait...</string>
    <string name="notification_token_is_not_generated">Notification token is not generated</string>

    <!---->

    <string name="buy_button">Buy</string>
    <string name="description">Instantly gain special powers when ordering a super cookie</string>
    <string name="lauren_nobel">Lauren Nobel</string>
    <string name="merchant_id_not_set_message"><![CDATA[To request a Google Pay nonce, replace <b>ConfigHelper.GOOGLE_PAY_MERCHANT_ID</b> with your Google Pay Merchant ID.]]></string>
    <string name="merchant_id_not_set_title">Missing Google Pay Merchant ID</string>
    <string name="missing_application_id_message"><![CDATA[Please update <b>sqip.SQUARE_APPLICATION_ID</b> in <b>AndroidManifest.xml</b> if you want to be able to create a nonce.]]></string>
    <string name="missing_application_id_title">Missing Square Application ID</string>
    <string name="network_failure_title">Network Error</string>
    <string name="network_failure">There was an error processing the payment, please check your network connection.</string>
    <string name="pay_button">Pay 🍪</string>
    <string name="pay_with_card">Pay with card</string>
    <string name="place_your_order">Place your order</string>
    <string name="price_a">$1.00</string>
    <string name="refund_helper_text">You can refund this transaction through your Square dashboard, go to squareup.com/dashboard.</string>
    <string name="retry">Retry</string>
    <string name="server_host_not_set_message"><![CDATA[Check logcat <b>Info</b> messages for a CURL command to charge the nonce, or replace <b>ConfigHelper.CHARGE_SERVER_HOST</b> with your server host.]]></string>
    <string name="server_host_not_set_title">Nonce generated but not charged</string>
    <string name="ship_to">Ship to</string>
    <string name="successful_order_message">Go to your Square dashboard to see this order reflected in the sales tab.</string>
    <string name="successful_order_title">Your order was successful</string>
    <string name="super_cookie">Super Cookie</string>
    <!-- <string name="total">Total</string>-->
    <string name="unsuccessful_order">Your order was not successful</string>
    <string name="showing_upcoming_orders">Showing upcoming orders</string>
    <string name="showing_new_orders">Showing new orders</string>
    <string name="showing_ready_orders">Showing ready orders</string>
    <string name="note">Note :</string>
    <string name="no_note_available">No instructions are available</string>
    <!---->

    <!---->
    <string name="ladoing_hisoty">Loading order history , please wait...</string>
    <string name="loading_orders">Loading orders , please wait...</string>
    <string name="ready_orders">Ready Orders</string>
    <string name="notificaitons">Notifications</string>
    <string name="no_notifications_avaliable">No notification available</string>
    <string name="no_order_available">No orders available</string>
    <string name="order_accepted">Order Accepted</string>
    <string name="served">Served</string>
    <string name="successfully_submitted">Successfully Submitted</string>
    <string name="failed">Failed</string>
    <string name="no_response_from_server">No Response from server!!</string>
    <string name="notification_list">Notification List</string>
    <string name="add_a_tip">Add Tip</string>
    <string name="done">Done</string>
    <string name="close">Close</string>
    <string name="to_be_print">To be print</string>
    <string name="showing_to_be_print_items">Showing to be print orders</string>
    <string name="order_id_not_found">Order id not found for this notification , check server side data base</string>
    <string name="finish">Finish</string>
    <string name="add_general_note">General Note</string>
    <string name="no_notes_available">No Notes Available</string>
</resources>