<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:background="@drawable/dialog_bg"
        android:verticalScrollbarPosition="defaultPosition"
        android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_80sdp"
                    android:background="@drawable/background" />

            <ImageView
                    android:id="@+id/cancelDialog"
                    android:layout_gravity="end|top"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_margin="@dimen/_8sdp"
                    android:background="@drawable/ic_cross" />
        </FrameLayout>


        <TextView
                android:id="@+id/orderName"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_8sdp"
                android:textColor="@color/black"
                android:text="OrderName"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:textSize="@dimen/_8sdp"
                android:layout_height="wrap_content" />

        <TextView
                android:id="@+id/orderDes"
                android:layout_width="match_parent"
                android:textColor="@color/dark_gray"
                android:text="Order Description"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:textSize="@dimen/_6sdp"
                android:layout_height="wrap_content" />

        <TextView
                android:id="@+id/sideChoice"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_15sdp"
                android:textColor="@color/black"
                android:text="@string/side_choice"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:textSize="@dimen/_8sdp"
                android:layout_height="wrap_content" />

        <TextView
                android:id="@+id/sideChoiceMessage"
                android:layout_width="match_parent"
                android:textColor="@color/dark_gray"
                android:text="@string/please_select_two_options"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:textSize="@dimen/_6sdp"
                android:layout_height="wrap_content" />

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewDialogChoice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp" />

        <LinearLayout
                android:layout_margin="@dimen/_10sdp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="match_parent"
                    android:textColor="@color/dark_gray"
                    android:text="@string/note"
                    android:textSize="@dimen/_8sdp"
                    android:padding="@dimen/_5sdp"
                    android:textAllCaps="true"
                    android:layout_height="wrap_content" />

            <EditText
                    android:id="@+id/instractionEditTextId"
                    android:layout_width="match_parent"
                    android:padding="@dimen/_10sdp"
                    android:textSize="@dimen/_8sdp"
                    android:maxLines="3"
                    android:gravity="top|start"
                    android:background="@drawable/rectangle_round_with_shadow"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:hint="@string/add_instruction"
                    android:layout_height="wrap_content" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:layout_height="wrap_content">

                <Button
                        android:id="@+id/choiceSubmit"
                        android:textAllCaps="false"
                        android:text="@string/submit"
                        android:textColor="@color/text_selector_effect"
                        android:layout_width="@dimen/_70sdp"
                        android:background="@drawable/button_selector_effect_reverse"
                        android:layout_height="@dimen/_20sdp" />

                <Button
                        android:id="@+id/choiceCancle"
                        android:textAllCaps="false"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:text="@string/cancle"
                        android:textColor="@color/text_selector_effect"
                        android:layout_width="@dimen/_70sdp"
                        android:background="@drawable/button_selector_effect_reverse"
                        android:layout_height="@dimen/_20sdp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>